<resources>
    <string name="app_name">Finance Management</string>
    <string name="money_default">€100</string>
    <string name="text">Hello world, this is a text for testing</string>
    <string name="amount_money">Amount</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="change_percentage">Change percentage</string>
    <string name="monthly_income">"Current monthly income is "</string>
    <string name="curr_savings">It should be</string>
    <string name="of_monthly_income">saved from your monthly income</string>
    <string name="pig_desc">Savings summary</string>
    <string name="loan">Loan</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="no_news">There are no news yet</string>
    <string name="edit">Edit</string>
    <string name="method">Method</string>
    <string name="category">Category</string>
    <string name="frequency">Frequency</string>
    <string name="last_ex">Last execution</string>
    <string name="date">Date</string>
    <string name="perc">Percentage</string>
    <string name="note">Note</string>
    <string name="expense_categories">Expense categories:</string>
    <string name="income_categories">Income categories:</string>
</resources>