<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Savings">

    <include android:id="@+id/header" layout="@layout/header" />

    <LinearLayout
        android:id="@+id/summary"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        android:background="@drawable/rounded_light">

        <ImageView
            android:id="@+id/pig"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/pig_desc"
            android:src="@drawable/ic_launcher_foreground"
            android:layout_weight="1"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_weight="6" >

            <TextView
                android:id="@+id/curr_savings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/cs_boline_edited"
                android:text="Amount"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/text_curr_savings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/curr_savings"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="15dp"
                android:text="@string/of_monthly_income"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/perc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_curr_savings"
                android:layout_alignParentStart="true"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/cs_boline_edited"
                android:text="Perc"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/text_perc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_curr_savings"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="30dp"
                android:layout_toEndOf="@+id/perc"
                android:text="@string/of_monthly_income"
                android:textSize="11sp" />

        </RelativeLayout>
    </LinearLayout>

    <!--
    YOUR SAVINGS SHOULD BE tot euro
    BECAUSE OF YOUR FIXED INCOME tot euro
    -->

    <LinearLayout
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/rounded_grey"
        android:orientation="vertical"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        app:layout_constraintTop_toBottomOf="@+id/summary"
        tools:layout_editor_absoluteX="40dp" >

        <TextView
            android:id="@+id/th_curr_savings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/curr_savings"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/monthly_income"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/monthly_income"
            android:textSize="18sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/info"
        app:layout_constraintBottom_toTopOf="@id/change"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="25dp"
        android:paddingVertical="15dp"
        android:paddingHorizontal="20dp"
        android:background="@drawable/rounded_sec" />

    <Button
        android:id="@+id/change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="40dp"
        android:padding="15dp"
        android:text="@string/change_percentage"
        android:fontFamily="@font/hornbill_black"
        android:textSize="22sp"
        style="@style/Button" />

</androidx.constraintlayout.widget.ConstraintLayout>